fixtures/frontend/milestone-2/valid/instance-declarations/main.aivi
class Eq A
(==): A -> A -> Bool

type Blob = Blob Bytes

value blobEquals: Bool left: Blob right: Blob =>
  True

instance Eq Blob
(==) left right = blobEquals left right

value sameBlob: Bool left: Blob right: Blob =>
  left == right

class Compare A
same: A -> A -> Bool

type Label = Label Text

instance Compare Label
same left right = left == right
