fixtures/frontend/milestone-2/invalid/duplicate-instance/main.aivi
class Eq A
    (==) : A -> A -> Bool

type Blob =
  | Blob Bytes

type Blob -> Blob -> Bool
func blobEquals = left right=>    True

instance Eq Blob
    (==) left right = blobEquals left right

instance Eq Blob
    (==) left right = blobEquals left right
